manifests/wg69/wg-proxy-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: skylink-proxy
  labels:
    app: wg-proxy
spec:
  type: ClusterIP
  selector:
    app: wg-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: dustpoc-proxy
  labels:
    app: wg-proxy
spec:
  type: ClusterIP
  selector:
    app: wg-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-ws-proxy
  labels:
    app: wg-proxy
spec:
  type: ClusterIP
  selector:
    app: wg-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8082
